deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia-go
  template:
    metadata:
      name: kubia-go
      labels:
        app: kubia-go
    spec:
      containers:
      - image: tyndyll/kubia-go:v1
        name: kubia-go
