service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-go
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia-go
