ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-go
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-go
          servicePort: 80
